Update and rename index.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
       <br> <br> <br> <br>
       <a href="https://www.youtube.com/channel/UCmN4cL3-IWi2UPCYNWUehVg/videos">Produkter</a>
       <br> <br> <br> <br>
-      <a href="https://www.youtube.com/channel/UCmN4cL3-IWi2UPCYNWUehVg/about">Om Oss</a>
+      <a href="https://skagenmaul.github.io/FreshMenu/index.html">Reset</a>
     </div>
   </div>
 </body>
